ajuste retorno usecase